# lab-kube-lens

./: .gitlab-ci.yml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: main.py  settings.py
app/analyze/: router.py
app/utils/: client.py  pdf_cleaner.py
data/: knowledge_base.json
scripts/: benchmark.py  seed.py
src/app/: dependencies.py  main.py  server.py  settings.py
src/app/analyze/: models.py  router.py
src/app/services/: ai_service.py
tests/: test_chain_ollama.py  test_health.py  test_pdf_cleaner.py
