[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kube-lens"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.135.3",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "qdrant-client==1.17.1",
    "requests==2.33.1",
    "uvicorn==0.43.0",
    "httpx==0.28.1"
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ruff==0.6.5",
    "mypy==1.11.1",
    "deptry==0.25.1",
    "pytest-cov==7.1.0"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort, UP: pyupgrade
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.deptry]
known_first_party = ["app"]
optional_dependencies_dev_groups = ["dev"]

[tool.fastapi]
entrypoint = "app.main:app"